<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences_header">

        <SwitchPreference
            android:key="enabled"
            android:title="@string/enabled_title" />
        <io.cjybyjk.statuslyricext.fork.preferences.PackageListPreference
            android:dependency="enabled"
            android:key="ignored_packages"
            android:title="@string/ignored_apps_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="about"
        android:title="@string/about_header">

        <Preference
            android:key="app"
            android:title="@string/app_name" />
        <Preference
            android:key="source_app"
            android:title="@string/source_app_name" />
        <Preference
            android:key="lyric_view"
            android:title="LyricView" />
    </PreferenceCategory>

</PreferenceScreen>